<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="none">
    </group>

    <group android:id="@+id/menu_mid"
        android:checkableBehavior="none">

        <item
            android:id="@+id/interventions"
            android:icon="@drawable/inte"
            android:title="@string/intervention" />

        <item
            android:id="@+id/interventionsFait"
            android:icon="@drawable/don"
            android:title="Interventions Fait" />

        <item
            android:id="@+id/interventionsAnnuler"
            android:icon="@drawable/no"
            android:title="Interventions Annulé" />

        <item
            android:id="@+id/interventionsreporter"
            android:icon="@drawable/re"
            android:title="Interventions reportés" />

        <item
            android:id="@+id/jobs"
            android:icon="@drawable/baseline_people_black_18"
            android:title="@string/jobs" />


        <item
            android:id="@+id/notes"
            android:icon="@drawable/baseline_event_note_black_18"
            android:title="@string/notes" />
    </group>

    <group android:id="@+id/menu_down"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_black_18"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/action_Logout" />
    </group>

</menu>
